tests/custom_discriminant/fail/strange_discriminant_types.stderr
error: cannot use `impl Trait` as discriminant type
 --> tests/custom_discriminant/fail/strange_discriminant_types.rs:3:23
  |
3 | #[custom_discriminant(impl Default)]
  |                       ^^^^^^^^^^^^

error: cannot use trait object as discriminant type
 --> tests/custom_discriminant/fail/strange_discriminant_types.rs:9:23
  |
9 | #[custom_discriminant(dyn Default)]
  |                       ^^^^^^^^^^^

error: cannot infer discriminant type
  --> tests/custom_discriminant/fail/strange_discriminant_types.rs:15:23
   |
15 | #[custom_discriminant(_)]
   |                       ^

error: cannot use the never type as discriminant type
  --> tests/custom_discriminant/fail/strange_discriminant_types.rs:21:23
   |
21 | #[custom_discriminant(!)]
   |                       ^
